# dsol

./: CMakeLists.txt
app/: node_data.cpp  node_odom.cpp
include/dsol/: adjust.h  align.h  camera.h  direct.h  extra.h  frame.h  hessian.h  node_util.h  odom.h  point.h  select.h  solve.h  stereo.h  viz.h  window.h
include/utils/: dataset.h  math.h  summary.h
launch/: dsol_data.launch  dsol_odom.launch
rviz/: dsol.rviz
src/dsol/: adjust.cpp  align.cpp  camera.cpp  direct.cpp  extra.cpp  frame.cpp  hessian.cpp  image.cpp  node_util.cpp  odom.cpp  point.cpp  select.cpp  solve.cpp  stereo.cpp  viz.cpp  viz_test.cpp  window.cpp
src/ros1/: msg_conv.cpp
src/utils/: cmap.cpp  dataset.cpp  eigen.cpp  math.cpp  metric.cpp  ocv.cpp  summary.cpp
test/: adjust_play.cpp  align_play.cpp  align_test.cpp  camera_test.cpp  cmap_test.cpp  dataset_play.cpp  direct_test.cpp  eigen_test.cpp  frame_test.cpp  grid2d_test.cpp  hessian_test.cpp  image_test.cpp  math_test.cpp  metric_test.cpp  ocv_test.cpp  odom_play.cpp  pixel_test.cpp  point_test.cpp  select_play.cpp  select_test.cpp  solve_test.cpp  stereo_play.cpp  stereo_test.cpp  tbb_test.cpp  window_test.cpp
